infra/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ${GATEWAY_NAME}
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    port: 80
    protocol: HTTP
